--- a/pub/skins/pmwiki/pmwiki.css
+++ b/pub/skins/pmwiki/pmwiki.css
@@ -212,7 +212,7 @@ border-bottom:none!important;
 #wikiedit form { margin:0px; width:100%; }
 #wikiedit textarea { width:100%; border : 0px;    padding-left: 0px;
     padding-top: 0px; overflow:hidden; resize:none; padding-bottom: 150px;  }
-:focus { outline: -webkit-focus-ring-color auto 0px; }
+:focus { outline: none; }
 .wikimessage { margin-top:4px; margin-bottom:4px; font-style:italic; }
 
 /* These affect the lines at the very bottom. */
